--- a/style1.css
+++ b/style1.css
@@ -52,9 +52,16 @@ body {
     //border-top-right-radius: 0px;
     //border-bottom-right-radius: 0px;
 }
+
 .submit_button {
-    height: 30px;
+    height: 50px;
     position: absolute;
     left: 8px;
     bottom: 40px;
+}
+.submit_button1 {
+    height: 50px;
+    position: absolute;
+    bottom: 40px;
+    left: 150px;
 }
