everything except for the comments work

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
+<X-Content-Type-Options: nosniff>
 <html land = "ru">
     <head>
         <meta charset="utf-8">
         <title> Пицца </title>
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-        <script src="app.js"></script>
+        <!--<script src="app.js"></script>-->
     </head>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style_check.css">
     <body>
         <div class="container">
-            <div  class = "name-catalog"> <a name="catalog">Товары</a> </div>
+            <div  class = "name-catalog"> <a name="catalog">Пицца</a> </div>
             <div class="row" id="row">
                 <div class="col">
                     <a href="/pizza1"  title="Три сыра">
