--- a/views/pizza5.hbs
+++ b/views/pizza5.hbs
@@ -109,7 +109,7 @@
     <br>
     Стоимость:<br>
     <input id='tot' name='total' placeholder="380" value="380" disabled />
-    <a href='/create' title="Оформление" class='submit_button'><button onclick='submit();' title='Submit'>Оформить заказ</button></a>
+    <a href='/create' title="Оформление" class='submit_button'><button onclick='get_att();submit();' title='Submit'>Оформить заказ</button></a>
     <a title="Отменить" class='submit_button1'><button onclick="history.back();" title='Go_back'>Изменить выбор</button></a>
     <script>
         document.getElementById('type').innerHTML = pizza_type;
