--- a/views/pizza9.hbs
+++ b/views/pizza9.hbs
@@ -116,11 +116,16 @@
     <br>
     Стоимость:<br>
     <input id='tot' name='total' placeholder="380" value="380" disabled />
-    <a href='/create' title="Оформление" class='submit_button'><button onclick='submit();' title='Submit'>Оформить заказ</button></a>
+    <a href='/create' title="Оформление" class='submit_button'><button onclick='get_att();submit();' title='Submit'>Оформить заказ</button></a>
     <a title="Отменить" class='submit_button1'><button onclick="history.back();" title='Go_back'>Изменить выбор</button></a>
     <script>
         document.getElementById('type').innerHTML = pizza_type;
-        let total = document.getElementById('tot').getAttribute('value');
-        sessionStorage.setItem('tot', JSON.stringify(total));
+        let total;
+
+        function get_att() {
+            total = document.getElementById('tot').getAttribute('value');
+            sessionStorage.setItem('total', total);
+        }
+
     </script>
 </body>
